[[bench]]
name = "chrono"
required-features = [ "__internal_bench",]
harness = false

[[bench]]
name = "serde"
required-features = [ "__internal_bench", "serde",]
harness = false

[package]
name = "chrono"
version = "0.5.0-alpha.1"
description = "Date and time library for Rust"
homepage = "https://github.com/chronotope/chrono"
documentation = "https://docs.rs/chrono/"
repository = "https://github.com/chronotope/chrono"
keywords = [ "date", "time", "calendar",]
categories = [ "date-and-time",]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [ "/ci/*",]
edition = "2018"
rust-version = "1.56.0"

[lib]
name = "chrono"

[features]
default = [ "clock", "std", "wasmbind",]
alloc = []
libc = []
std = []
clock = [ "std", "windows-sys", "iana-time-zone",]
wasmbind = [ "wasm-bindgen", "js-sys",]
unstable-locales = [ "pure-rust-locales", "alloc",]
__internal_bench = [ "criterion",]
__doctest = []

[dependencies]
arbitrary = "1.3.2"
bolero = "0.8.0"

[dependencies.serde]
version = "1.0.99"
default-features = false
optional = true

[dependencies.pure-rust-locales]
version = "0.5.2"
optional = true

[dependencies.criterion]
version = "0.4.0"
optional = true

[dependencies.rkyv]
version = "0.7"
optional = true

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.serde_derive]
version = "1"
default-features = false

[dev-dependencies.bincode]
version = "1.3.0"

[dev-dependencies.num-iter]
version = "0.1.35"
default-features = false

[dev-dependencies.doc-comment]
version = "0.3"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "serde",]

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = [ "serde",]
rustdoc-args = [ "--cfg", "docsrs",]

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.wasm-bindgen]
version = "0.2"
optional = true

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.js-sys]
version = "0.3"
optional = true

[target."cfg(windows)".dependencies.windows-sys]
version = "0.48.0"
features = [ "Win32_System_Time", "Win32_System_SystemInformation", "Win32_Foundation",]
optional = true

[target."cfg(unix)".dependencies.iana-time-zone]
version = "0.1.45"
optional = true
features = [ "fallback",]
