[[example]]
name = "tcp_server"
required-features = [ "os-poll", "net",]

[[example]]
name = "tcp_listenfd_server"
required-features = [ "os-poll", "net",]

[[example]]
name = "udp_server"
required-features = [ "os-poll", "net",]

[package]
edition = "2018"
name = "mio"
version = "0.8.6"
license = "MIT"
authors = [ "Carl Lerche <me@carllerche.com>", "Thomas de Zeeuw <thomasdezeeuw@gmail.com>", "Tokio Contributors <team@tokio.rs>",]
description = "Lightweight non-blocking I/O."
homepage = "https://github.com/tokio-rs/mio"
repository = "https://github.com/tokio-rs/mio"
readme = "README.md"
keywords = [ "io", "async", "non-blocking",]
categories = [ "asynchronous",]
include = [ "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md", "src/**/*.rs", "examples/**/*.rs",]

[features]
default = []
os-poll = []
os-ext = [ "os-poll", "windows-sys/Win32_System_Pipes", "windows-sys/Win32_Security",]
net = []

[dependencies]
log = "0.4.8"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
rand = "0.8"

[dev-dependencies.env_logger]
version = "0.9.3"
default-features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "os-poll", "os-ext", "net",]

[target."cfg(unix)".dependencies]
libc = "0.2.121"

[target."cfg(target_os = \"wasi\")".dependencies]
wasi = "0.11.0"
libc = "0.2.121"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]
targets = [ "aarch64-apple-ios", "aarch64-linux-android", "wasm32-wasi", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-dragonfly", "x86_64-unknown-freebsd", "x86_64-unknown-illumos", "x86_64-unknown-linux-gnu", "x86_64-unknown-netbsd", "x86_64-unknown-openbsd",]

[target."cfg(windows)".dependencies.windows-sys]
version = "0.48"
features = [ "Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_WindowsProgramming",]
