[package]
name = "semver"
version = "1.0.17"
authors = [ "David Tolnay <dtolnay@gmail.com>",]
categories = [ "data-structures", "no-std",]
description = "Parser and evaluator for Cargo's flavor of Semantic Versioning"
documentation = "https://docs.rs/semver"
edition = "2018"
keywords = [ "cargo",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/semver"
rust-version = "1.31"

[features]
default = [ "std",]
std = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[lib]
doc-scrape-examples = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu",]
rustdoc-args = [ "--cfg", "doc_cfg",]
