[workspace]
members = [ "blake2", "fsb", "gost94", "groestl", "md2", "md4", "md5", "ripemd", "sha1", "sha2", "sha3", "shabal", "sm3", "streebog", "tiger", "whirlpool",]
exclude = [ "ascon-hash", "belt-hash", "jh", "k12", "skein",]

[profile.dev]
opt-level = 2

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
