[package]
name = "rustc-demangle"
version = "0.1.23"
authors = [ "Alex Crichton <alex@alexcrichton.com>",]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/rustc-demangle"
homepage = "https://github.com/alexcrichton/rustc-demangle"
documentation = "https://docs.rs/rustc-demangle"
description = "Rust compiler symbol demangling.\n"

[workspace]
members = [ "crates/capi", "fuzz",]

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[features]
rustc-dep-of-std = [ "core", "compiler_builtins",]
std = []

[dependencies.core]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-core"

[dependencies.compiler_builtins]
version = "0.1.2"
optional = true

[profile.release]
lto = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "std",]
rustdoc-args = [ "--cfg", "docsrs",]
