[[example]]
name = "hyphenation"
path = "examples/hyphenation.rs"
required-features = [ "hyphenation",]

[[example]]
name = "termwidth"
path = "examples/termwidth.rs"
required-features = [ "terminal_size",]

[package]
name = "textwrap"
version = "0.16.0"
authors = [ "Martin Geisler <martin@geisler.net>",]
description = "Library for word wrapping, indenting, and dedenting strings. Has optional support for Unicode and emojis as well as machine hyphenation."
documentation = "https://docs.rs/textwrap/"
repository = "https://github.com/mgeisler/textwrap"
readme = "README.md"
keywords = [ "text", "formatting", "wrap", "typesetting", "hyphenation",]
categories = [ "text-processing", "command-line-interface",]
license = "MIT"
edition = "2021"
exclude = [ ".github/", ".gitignore", "benchmarks/", "examples/", "fuzz/", "images/",]

[features]
default = [ "unicode-linebreak", "unicode-width", "smawk",]

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
unic-emoji-char = "0.9.0"
version-sync = "0.9.4"

[dependencies.hyphenation]
version = "0.8.4"
optional = true
features = [ "embed_en-us",]

[dependencies.smawk]
version = "0.3.1"
optional = true

[dependencies.terminal_size]
version = "0.2.1"
optional = true

[dependencies.unicode-linebreak]
version = "0.1.4"
optional = true

[dependencies.unicode-width]
version = "0.1.10"
optional = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[target."cfg(unix)".dev-dependencies]
termion = "2.0.1"

[package.metadata.docs.rs]
all-features = true
