[package]
name = "serde_json"
version = "1.0.96"
authors = [ "Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>",]
categories = [ "encoding", "parser-implementations", "no-std",]
description = "A JSON serialization file format"
documentation = "https://docs.rs/serde_json"
edition = "2018"
keywords = [ "json", "serde", "serialization",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/json"
rust-version = "1.36"

[dependencies]
itoa = "1.0"
ryu = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
automod = "1.0"
indoc = "2.0"
ref-cast = "1.0"
rustversion = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_stacker = "0.1"

[workspace]
members = [ "tests/crate",]

[lib]
doc-scrape-examples = false

[features]
default = [ "std",]
std = [ "serde/std",]
alloc = [ "serde/alloc",]
preserve_order = [ "indexmap", "std",]
float_roundtrip = []
arbitrary_precision = []
raw_value = []
unbounded_depth = []

[dependencies.serde]
version = "1.0.100"
default-features = false

[dependencies.indexmap]
version = "1.5.2"
features = [ "std",]
optional = true

[dev-dependencies.serde]
version = "1.0.100"
features = [ "derive",]

[dev-dependencies.trybuild]
version = "1.0.49"
features = [ "diff",]

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "raw_value",]

[package.metadata.docs.rs]
features = [ "raw_value", "unbounded_depth",]
targets = [ "x86_64-unknown-linux-gnu",]
rustdoc-args = [ "--cfg", "docsrs",]
