[[bench]]
name = "bench"
harness = false

[package]
name = "crc32fast"
version = "1.3.2"
license = "MIT OR Apache-2.0"
authors = [ "Sam Rijs <srijs@airpost.net>", "Alex Crichton <alex@alexcrichton.com>",]
description = "Fast, SIMD-accelerated CRC32 (IEEE) checksum computation"
repository = "https://github.com/srijs/rust-crc32fast"
readme = "README.md"
keywords = [ "checksum", "crc", "crc32", "simd", "fast",]

[dependencies]
cfg-if = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
bencher = "0.1"
rand = "0.8"

[features]
default = [ "std",]
std = []
nightly = []

[dev-dependencies.quickcheck]
version = "1.0"
default-features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
