[workspace]
default-members = [ "time",]
members = [ "time", "time-core", "time-macros",]
resolver = "2"

[workspace.dependencies]
itoa = "1.0.1"
js-sys = "0.3.58"
libc = "0.2.98"
num_threads = "0.1.2"
quickcheck_macros = "1.0.0"
serde_json = "1.0.68"
serde_test = "1.0.126"
trybuild = "1.0.68"

[profile.dev]
debug = 0

[profile.test]
debug = 2

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[workspace.dependencies.time-core]
path = "time-core"
version = "=0.1.1"

[workspace.dependencies.time-macros]
path = "time-macros"
version = "=0.2.9"

[workspace.dependencies.criterion]
version = "0.4.0"
default-features = false

[workspace.dependencies.quickcheck]
version = "1.0.3"
default-features = false

[workspace.dependencies.rand]
version = "0.8.4"
default-features = false

[workspace.dependencies.serde]
version = "1.0.126"
default-features = false
