[package]
authors = [ "Ashley Mannix<ashleymannix@live.com.au>", "Christopher Armstrong", "Dylan DPC<dylan.dpc@gmail.com>", "Hunar Roop Kahlon<hunar.roop@gmail.com>",]
categories = [ "data-structures", "no-std", "parser-implementations", "wasm",]
description = "A library to generate and parse UUIDs."
documentation = "https://docs.rs/uuid"
edition = "2018"
exclude = [ ".github/**",]
keywords = [ "guid", "unique", "uuid",]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/uuid-rs/uuid"
name = "uuid"
readme = "README.md"
repository = "https://github.com/uuid-rs/uuid"
version = "1.4.0"

[features]
default = [ "std",]
std = []
macro-diagnostics = [ "uuid-macro-internal",]
v1 = [ "atomic",]
v3 = [ "md5",]
v4 = [ "rng",]
v5 = [ "sha1",]
v6 = [ "atomic",]
v7 = [ "atomic", "rng",]
v8 = []
js = [ "wasm-bindgen", "getrandom", "getrandom/js",]
rng = [ "getrandom",]
fast-rng = [ "rng", "rand",]
sha1 = [ "sha1_smol",]
md5 = [ "md-5",]

[dependencies]
arbitrary = "1.3.2"
bolero = "0.8.0"

[workspace]
members = [ "macros", "tests/smoke-test",]

[dependencies.serde]
default-features = false
optional = true
version = "1.0.56"

[dependencies.slog]
optional = true
version = "2"

[dependencies.zerocopy]
optional = true
version = "0.6"

[dependencies.borsh]
optional = true
version = "0.10.3"

[dependencies.getrandom]
package = "getrandom"
optional = true
version = "0.2"

[dependencies.rand]
package = "rand"
optional = true
version = "0.8"

[dependencies.md-5]
package = "md-5"
default-features = false
optional = true
version = "0.10"

[dependencies.sha1_smol]
package = "sha1_smol"
default-features = false
optional = true
version = "1"

[dependencies.uuid-macro-internal]
package = "uuid-macro-internal"
version = "1.4.0"
path = "macros"
optional = true

[dependencies.atomic]
package = "atomic"
default-features = false
optional = true
version = "0.5"

[dependencies.wasm-bindgen]
package = "wasm-bindgen"
version = "0.2"
optional = true

[badges.is-it-maintained-issue-resolution]
repository = "uuid-rs/uuid"

[badges.is-it-maintained-open-issues]
repository = "uuid-rs/uuid"

[badges.maintenance]
status = "actively-developed"

[dev-dependencies.bincode]
version = "1.0"

[dev-dependencies.serde_derive]
version = "1.0.79"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.serde_test]
version = "1.0.56"

[dev-dependencies.trybuild]
version = "1.0.52"

[dev-dependencies.rustversion]
version = "1"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "serde", "v1", "v3", "v4", "v5", "v6", "v7", "v8",]

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "uuid_unstable",]
rustdoc-args = [ "--cfg", "uuid_unstable",]
targets = [ "x86_64-unknown-linux-gnu",]
features = [ "serde", "arbitrary", "slog", "borsh", "v1", "v3", "v4", "v5", "v6", "v7", "v8",]

[target."cfg(target = \"wasm32-unknown-unknown\")".dev-dependencies.wasm-bindgen]
package = "wasm-bindgen"
version = "0.2"

[target."cfg(all(target_arch = \"wasm32\", target_vendor = \"unknown\", target_os = \"unknown\"))".dev-dependencies.wasm-bindgen-test]
version = "0.3"

[target."cfg(windows)".dev-dependencies.windows-sys]
version = "0.48.0"
features = [ "Win32_System_Com",]
