[package]
authors = [ "The Rust Project Developers",]
description = "Numeric traits for generic mathematics"
documentation = "https://docs.rs/num-traits"
homepage = "https://github.com/rust-num/num-traits"
keywords = [ "mathematics", "numerics",]
categories = [ "algorithms", "science", "no-std",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num-traits"
name = "num-traits"
version = "0.2.15"
readme = "README.md"
build = "build.rs"
exclude = [ "/bors.toml", "/ci/*", "/.github/*",]
edition = "2018"
rust-version = "1.31"

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[features]
default = [ "std",]
std = []
i128 = []

[build-dependencies]
autocfg = "1"

[dependencies.libm]
version = "0.2.0"
optional = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "std",]
