[package]

name = "semver"
version = "0.11.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/steveklabnik/semver"
homepage = "https://docs.rs/crate/semver/"
documentation = "https://docs.rs/crate/semver/"
description = """
Semantic version parsing and comparison.
"""
readme = "README.md"
keywords = ["version", "semantic", "compare"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
quote="=1.0.9"
semver-parser = "0.10.0"
proc-macro2="=1.0.24"
serde = { version = "1.0", optional = true }
diesel = { version = "1.1", optional = true }
once_cell="=1.7.0"
pest="=2.1.3"
[features]
default = []

# are we testing on CI?
ci = ["serde", "diesel/sqlite"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
