[package]
name = "safefinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "safefinder"
test = false
doctest = false

[[bin]]
name = "cargorunner"
test = false
doctest = false


[dependencies]
libc = "0.2.117"
rustc_version = "0.2.3"
wait-timeout = "0.2"
cargo_metadata = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
which = "4.0"
snafu = "0.6"

# This configuration doesn't exist so it shouldn't affect your buil

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]