[package]
name = "quick-xml"
version = "0.23.0"
description = "High performance xml reader and writer"
edition = "2018"
documentation = "https://docs.rs/quick-xml"
repository = "https://github.com/tafia/quick-xml"
keywords = [ "xml", "serde", "parser", "writer", "html",]
categories = [ "encoding", "parsing", "parser-implementations",]
license = "MIT"

[dependencies]
memchr = "2.5"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.2"
regex = "1"
serde-value = "0.7"

[features]
default = []
encoding = [ "encoding_rs",]
serialize = [ "serde",]
escape-html = []

[dependencies.document-features]
version = "0.2"
optional = true

[dependencies.encoding_rs]
version = "0.8"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rand]
version = "0.8"
default-features = false
optional = true

[dependencies.redis]
version = "*"

[dependencies.ntest]
version = "*"

[dev-dependencies.serde]
version = "1.0"
features = [ "derive",]

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
