[package]
name = "gamie"
version = "0.7.0"
authors = [ "EAimTY <ea.imty@gmail.com>",]
description = "A Rust library provides abstractions for several classic tiny games"
categories = [ "games", "game-development", "no-std",]
keywords = [ "game", "board", "gomoku", "minesweeper", "reversi",]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/gamie"

[features]
default = [ "all",]
all = [ "std", "connect_four", "gomoku", "minesweeper", "reversi", "tictactoe",]
std = [ "snafu/std",]
connect_four = []
gomoku = []
minesweeper = []
reversi = []
tictactoe = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
rand = "0.8"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"
features = [ "alloc", "derive",]
optional = true

[dependencies.snafu]
version = "0.7"
default-features = false

[dependencies.redis]
version = "*"

[dependencies.ntest]
version = "*"

[dev-dependencies.gamie]
path = "."
features = [ "all",]

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
