[[bin]]
name = "lsd"
path = "src/main.rs"

[package]
authors = [ "Peltoche <dev@halium.fr>",]
build = "build.rs"
categories = [ "command-line-utilities",]
description = "An ls command with a lot of pretty colors and some other stuff."
keywords = [ "ls",]
license = "Apache-2.0"
name = "lsd"
readme = "./README.md"
repository = "https://github.com/Peltoche/lsd"
version = "0.21.0"
edition = "2021"

[build-dependencies]
clap = "2.33.*"
version_check = "0.9.*"

[dependencies]
bitflags = "=1.2.1"
dirs = "3.0.*"
libc = "0.2.*"
human-sort = "0.2.2"
term_grid = "0.1.*"
terminal_size = "0.1.*"
chrono = "0.4.*"
chrono-humanize = "0.1.*"
unicode-width = "0.1.*"
lscolors = "0.9.0"
wild = "2.0.*"
globset = "0.4.*"
xdg = "2.1.*"
yaml-rust = "0.4.*"
serde_yaml = "0.8"
url = "2.1.*"
ntest = "0.7.5"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1.0.1"
tempfile = "3"
serial_test = "0.5"

[features]
sudo = []

[dependencies.crossterm]
version = "0.21.0"
features = [ "serde",]

[dependencies.rand]
version = "0.8.4"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.clap]
features = [ "suggestions", "color", "wrap_help",]
version = "2.33.*"

[dependencies.redis]
version = "*"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[target."cfg(unix)".dependencies]
users = "0.11.*"
xattr = "0.2.*"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.*"
features = [ "aclapi", "accctrl", "winnt", "winerror", "securitybaseapi", "winbase",]
