[package]
name = "tight"
version = "1.0.1"
authors = [ "Will Korteland <will@korte.land>",]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple command-line expense tracker"
homepage = "https://git.korte.land/will/tight"
repository = "https://git.korte.land/will/tight"
documentation = "https://git.korte.land/will/tight"
readme = "README.md"
keywords = [ "finance", "utility",]
categories = [ "command-line-utilities",]

[dependencies]
chrono = "0.4"
clap = "2.33"
colored = "2.0"
regex = "1.3"
scan_fmt = "0.2"
serde_json = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.rand]
version = "0.8"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.redis]
version = "*"

[dependencies.ntest]
version = "*"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
