[package]
name = "sha1"
version = "0.10.5"
description = "SHA-1 hash function"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/sha1"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "sha1", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[dependencies]
digest = "0.10.7"
cfg-if = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]
oid = [ "digest/oid",]
asm = [ "sha1-asm",]
compress = []
force-soft = []

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]

[target."cfg(any(target_arch = \"aarch64\", target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies]
cpufeatures = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]

[target."cfg(any(target_arch = \"aarch64\", target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies.sha1-asm]
version = "0.5"
optional = true
