[package]
name = "whirlpool"
version = "0.10.4"
description = "Whirlpool hash function"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/whirlpool"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "whirlpool", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[dependencies]
digest = "0.10.7"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]
asm = [ "whirlpool-asm",]

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies.whirlpool-asm]
version = "0.6"
optional = true
