[package]
name = "sha3"
version = "0.10.8"
description = "Pure Rust implementation of SHA-3, a family of Keccak-based hash functions\nincluding the SHAKE family of eXtendable-Output Functions (XOFs), as well as\nthe accelerated variant TurboSHAKE\n"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/sha3"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "sha3", "keccak", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[dependencies]
digest = "0.10.7"
keccak = "0.1.4"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]
asm = [ "keccak/asm",]
oid = [ "digest/oid",]
reset = []

[dependencies.zeroize]
version = "1.6.0"
default-features = false
optional = true

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]
