[package]
name = "bincode_compatibility"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.bincode_2]
path = ".."
package = "bincode"
features = [ "serde",]

[dependencies.bincode_1]
version = "1"
package = "bincode"

[dependencies.serde]
version = "1"
features = [ "derive",]
