[package]
name = "time-macros"
version = "0.2.9"
authors = [ "Jacob Pratt <open-source@jhpratt.dev>", "Time contributors",]
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/time-rs/time"
keywords = [ "date", "time", "calendar", "duration",]
categories = [ "date-and-time",]
license = "MIT OR Apache-2.0"
description = "    Procedural macros for the time crate.\n    This crate is an implementation detail and should not be relied upon directly.\n"

[features]
formatting = []
large-dates = []
parsing = []
serde = []

[lib]
proc-macro = true

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.time-core]
workspace = true
