[package]
name = "md-5"
version = "0.10.5"
description = "MD5 hash function"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/md-5"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "md5", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[lib]
name = "md5"

[dependencies]
digest = "0.10.7"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]
asm = [ "md5-asm",]
oid = [ "digest/oid",]

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies.md5-asm]
version = "0.5"
optional = true
