[package]
name = "sha2"
version = "0.10.7"
description = "Pure Rust implementation of the SHA-2 hash function family\nincluding SHA-224, SHA-256, SHA-384, and SHA-512.\n"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/sha2"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "sha2", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[dependencies]
digest = "0.10.7"
cfg-if = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]
oid = [ "digest/oid",]
asm = [ "sha2-asm",]
compress = []
force-soft = []
asm-aarch64 = [ "asm",]

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]

[target."cfg(any(target_arch = \"aarch64\", target_arch = \"x86_64\", target_arch = \"x86\"))".dependencies]
cpufeatures = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]

[target."cfg(any(target_arch = \"aarch64\", target_arch = \"x86_64\", target_arch = \"x86\"))".dependencies.sha2-asm]
version = "0.6.1"
optional = true
