[package]
name = "shabal"
version = "0.4.1"
description = "Shabal hash functions"
authors = [ "RustCrypto Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/shabal"
repository = "https://github.com/RustCrypto/hashes"
keywords = [ "crypto", "shabal", "hash", "digest",]
categories = [ "cryptography", "no-std",]

[dependencies]
digest = "0.10.7"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
hex-literal = "0.2.2"

[features]
default = [ "std",]
std = [ "digest/std",]

[dev-dependencies.digest]
version = "0.10.7"
features = [ "dev",]
