
[package]
name = "hello"
version = "0.1.0"
authors = ["xiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug=1
[dependencies]

afl="=0.11.1"
bat={path="../bat"}

[[bin]]
name="test_bat0"
path="test_files/test_bat0.rs"


[[bin]]
name="test_bat14"
path="test_files/test_bat14.rs"


[[bin]]
name="test_bat1"
path="test_files/test_bat1.rs"


[[bin]]
name="test_bat11"
path="test_files/test_bat11.rs"


[[bin]]
name="test_bat18"
path="test_files/test_bat18.rs"


[[bin]]
name="test_bat6"
path="test_files/test_bat6.rs"


[[bin]]
name="test_bat13"
path="test_files/test_bat13.rs"


[[bin]]
name="test_bat7"
path="test_files/test_bat7.rs"


[[bin]]
name="test_bat9"
path="test_files/test_bat9.rs"


[[bin]]
name="test_bat5"
path="test_files/test_bat5.rs"


[[bin]]
name="test_bat19"
path="test_files/test_bat19.rs"


[[bin]]
name="test_bat8"
path="test_files/test_bat8.rs"


[[bin]]
name="test_bat17"
path="test_files/test_bat17.rs"


[[bin]]
name="test_bat4"
path="test_files/test_bat4.rs"


[[bin]]
name="test_bat3"
path="test_files/test_bat3.rs"


[[bin]]
name="test_bat16"
path="test_files/test_bat16.rs"


[[bin]]
name="test_bat10"
path="test_files/test_bat10.rs"


[[bin]]
name="test_bat2"
path="test_files/test_bat2.rs"


[[bin]]
name="test_bat15"
path="test_files/test_bat15.rs"


[[bin]]
name="test_bat12"
path="test_files/test_bat12.rs"

