
[package]
name = "hello"
version = "0.1.0"
authors = ["xiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug=1
[dependencies]

bat={path="../bat"}

[[bin]]
name="test_bat0"
path="replay_files/replay_bat0.rs"


[[bin]]
name="test_bat14"
path="replay_files/replay_bat14.rs"


[[bin]]
name="test_bat1"
path="replay_files/replay_bat1.rs"


[[bin]]
name="test_bat11"
path="replay_files/replay_bat11.rs"


[[bin]]
name="test_bat18"
path="replay_files/replay_bat18.rs"


[[bin]]
name="test_bat6"
path="replay_files/replay_bat6.rs"


[[bin]]
name="test_bat13"
path="replay_files/replay_bat13.rs"


[[bin]]
name="test_bat7"
path="replay_files/replay_bat7.rs"


[[bin]]
name="test_bat9"
path="replay_files/replay_bat9.rs"


[[bin]]
name="test_bat5"
path="replay_files/replay_bat5.rs"


[[bin]]
name="test_bat19"
path="replay_files/replay_bat19.rs"


[[bin]]
name="test_bat8"
path="replay_files/replay_bat8.rs"


[[bin]]
name="test_bat17"
path="replay_files/replay_bat17.rs"


[[bin]]
name="test_bat4"
path="replay_files/replay_bat4.rs"


[[bin]]
name="test_bat3"
path="replay_files/replay_bat3.rs"


[[bin]]
name="test_bat16"
path="replay_files/replay_bat16.rs"


[[bin]]
name="test_bat10"
path="replay_files/replay_bat10.rs"


[[bin]]
name="test_bat2"
path="replay_files/replay_bat2.rs"


[[bin]]
name="test_bat15"
path="replay_files/replay_bat15.rs"


[[bin]]
name="test_bat12"
path="replay_files/replay_bat12.rs"

