[package]
name = "hello"
version = "0.1.0"
authors = ["xiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl="=0.11.1"
clap={path="../clap"}
[profile.release]
debug=1

[[bin]]
name="test_clap42"
path="test_files/test_clap42.rs"


[[bin]]
name="test_clap18"
path="test_files/test_clap18.rs"


[[bin]]
name="test_clap47"
path="test_files/test_clap47.rs"


[[bin]]
name="test_clap49"
path="test_files/test_clap49.rs"


[[bin]]
name="test_clap56"
path="test_files/test_clap56.rs"


[[bin]]
name="test_clap57"
path="test_files/test_clap57.rs"


[[bin]]
name="test_clap19"
path="test_files/test_clap19.rs"


[[bin]]
name="test_clap1"
path="test_files/test_clap1.rs"


[[bin]]
name="test_clap9"
path="test_files/test_clap9.rs"


[[bin]]
name="test_clap51"
path="test_files/test_clap51.rs"


[[bin]]
name="test_clap37"
path="test_files/test_clap37.rs"


[[bin]]
name="test_clap36"
path="test_files/test_clap36.rs"


[[bin]]
name="test_clap6"
path="test_files/test_clap6.rs"


[[bin]]
name="test_clap43"
path="test_files/test_clap43.rs"


[[bin]]
name="test_clap17"
path="test_files/test_clap17.rs"


[[bin]]
name="test_clap21"
path="test_files/test_clap21.rs"


[[bin]]
name="test_clap52"
path="test_files/test_clap52.rs"


[[bin]]
name="test_clap33"
path="test_files/test_clap33.rs"


[[bin]]
name="test_clap53"
path="test_files/test_clap53.rs"


[[bin]]
name="test_clap24"
path="test_files/test_clap24.rs"


[[bin]]
name="test_clap25"
path="test_files/test_clap25.rs"


[[bin]]
name="test_clap7"
path="test_files/test_clap7.rs"


[[bin]]
name="test_clap29"
path="test_files/test_clap29.rs"


[[bin]]
name="test_clap23"
path="test_files/test_clap23.rs"


[[bin]]
name="test_clap0"
path="test_files/test_clap0.rs"


[[bin]]
name="test_clap2"
path="test_files/test_clap2.rs"


[[bin]]
name="test_clap30"
path="test_files/test_clap30.rs"


[[bin]]
name="test_clap27"
path="test_files/test_clap27.rs"


[[bin]]
name="test_clap10"
path="test_files/test_clap10.rs"


[[bin]]
name="test_clap22"
path="test_files/test_clap22.rs"


[[bin]]
name="test_clap48"
path="test_files/test_clap48.rs"


[[bin]]
name="test_clap55"
path="test_files/test_clap55.rs"


[[bin]]
name="test_clap12"
path="test_files/test_clap12.rs"


[[bin]]
name="test_clap3"
path="test_files/test_clap3.rs"


[[bin]]
name="test_clap15"
path="test_files/test_clap15.rs"


[[bin]]
name="test_clap8"
path="test_files/test_clap8.rs"


[[bin]]
name="test_clap4"
path="test_files/test_clap4.rs"


[[bin]]
name="test_clap11"
path="test_files/test_clap11.rs"


[[bin]]
name="test_clap39"
path="test_files/test_clap39.rs"


[[bin]]
name="test_clap50"
path="test_files/test_clap50.rs"


[[bin]]
name="test_clap45"
path="test_files/test_clap45.rs"


[[bin]]
name="test_clap20"
path="test_files/test_clap20.rs"


[[bin]]
name="test_clap13"
path="test_files/test_clap13.rs"


[[bin]]
name="test_clap54"
path="test_files/test_clap54.rs"


[[bin]]
name="test_clap35"
path="test_files/test_clap35.rs"


[[bin]]
name="test_clap28"
path="test_files/test_clap28.rs"


[[bin]]
name="test_clap32"
path="test_files/test_clap32.rs"


[[bin]]
name="test_clap14"
path="test_files/test_clap14.rs"


[[bin]]
name="test_clap16"
path="test_files/test_clap16.rs"


[[bin]]
name="test_clap31"
path="test_files/test_clap31.rs"


[[bin]]
name="test_clap58"
path="test_files/test_clap58.rs"


[[bin]]
name="test_clap46"
path="test_files/test_clap46.rs"


[[bin]]
name="test_clap40"
path="test_files/test_clap40.rs"


[[bin]]
name="test_clap34"
path="test_files/test_clap34.rs"


[[bin]]
name="test_clap41"
path="test_files/test_clap41.rs"


[[bin]]
name="test_clap44"
path="test_files/test_clap44.rs"


[[bin]]
name="test_clap5"
path="test_files/test_clap5.rs"


[[bin]]
name="test_clap38"
path="test_files/test_clap38.rs"


[[bin]]
name="test_clap26"
path="test_files/test_clap26.rs"
